--- a/Booking.html
+++ b/Booking.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css" type="text/css">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" type="text/css">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
+
     <link rel="stylesheet" href="assets/css/style.css">
     <title>KarlsDinner</title>
 </head>
@@ -33,7 +34,7 @@
                         <div class="collapse navbar-collapse" id="navbar-Nav">
                             <ul id="nav">
                                 <li class="nav-list">
-                                    <a href="Home.html"><span>Home</span></a>
+                                    <a href="#"><span>Home</span></a>
                                 </li>
                                 <li class="nav-item dropdown">
                                     <a class="nav-link dropdown-toggle" href="#" id="menuDropdown" role="button"
@@ -45,11 +46,11 @@
                                     </ul>
                                 </li>
                                 <li class="nav-list">
-                                    <a href="#"><span>Bookings</span></a>
+                                    <a href="Booking.html"><span>Bookings</span></a>
                                 </li>
-                                <!--<li class="nav-list">
+                                <li class="nav-list">
                                     <a href="#"><span>Contact</span></a>
-                                </li>-->
+                                </li>
                             </ul>
                         </div>                        
                     </div>
@@ -60,7 +61,7 @@
     </header>
     <section>
         <div class="col-auto">
-            <h1>things we like to see</h1>
+            <h1>things we like to book</h1>
         </div>
 
 
@@ -107,8 +108,8 @@
             <div class="col-sm-4 ">
                 <h5 class="uppercase general-sub">Contact</h5>
                 <p class="contact">
-                    Address: DuvbergVagen 10, Stockholm-Sweden.<br>
-                    Phone: +46-78787878<br>
+                    Address: DuvbergVagen 10, Stockholm-Sweden.
+                    Phone: +46-78787878
                     Email: KarlsDinner@dinner.com
                 </p>
             </div>
@@ -118,3 +119,4 @@
 </body>
 
 </html>
+
