--- a/Menu.html
+++ b/Menu.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css"type="text/css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css"type="text/css">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" type="text/css" />    
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
     <link rel="stylesheet" href="assets/css/style.css">
     <title>KarlsDinner</title>
 </head>
@@ -25,18 +26,18 @@
                     <!--Navbar-->
                     <div class="navbar navbar-dark">
                         <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
-                            data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false"
+                            data-bs-target="#navbar-Nav" aria-controls="navbarNav" aria-expanded="false"
                             aria-label="Toggle navigation">
                             <span class="navbar-toggler-icon"></span>
                         </button>
                         <div class="collapse navbar-collapse" id="navbar-Nav">
-                            <ul id="nav">
+                            <ul id="nav me-auto mb-2 mb-lg-0">
                                 <li class="nav-list">
                                     <a href="#"><span>Home</span></a>
                                 </li>
-                                <li class="nav-list">
-                                    <a class="nav-link dropdown-toggle" href="#" id="menuDropdown" role="button" 
-                                    data-bs-toggle="dropdown" aria-expanded="false"><span>menu</span></a>
+                                <li class="nav-item dropdown">
+                                    <a class="nav-link dropdown-toggle" href="Menu.html" id="menuDropdown" role="button"
+                                        data-bs-toggle="dropdown" aria-expanded="false">Menu</a>
                                     <ul class="dropdown-menu" aria-labelledby="menuDropdown">
                                         <li><a class="dropdown-item" href="#">Breakfast</a></li>
                                         <li><a class="dropdown-item" href="#">Lunch</a></li>
@@ -58,6 +59,9 @@
         </div>
     </header>
     <section>
+        <div class="col-auto">
+            <h1>thing we menu</h1>
+        </div>
 
     </section>
     <footer class="container-fluid">
