--- a/index.html
+++ b/index.html
@@ -33,23 +33,23 @@
                         <div class="collapse navbar-collapse" id="navbar-Nav">
                             <ul id="nav">
                                 <li class="nav-list">
-                                    <a href="Home.html"><span>Home</span></a>
+                                    <a href="index.html"><span>Home</span></a>
                                 </li>
                                 <li class="nav-item dropdown">
-                                    <a class="nav-link dropdown-toggle" href="#" id="menuDropdown" role="button"
+                                    <a class="nav-link dropdown-toggle" href="Menu.html" id="menuDropdown" role="button"
                                         data-bs-toggle="dropdown" aria-expanded="false">Menu</a>
                                     <ul class="dropdown-menu" aria-labelledby="menuDropdown">
-                                        <li><a class="dropdown-item" href="#">Breakfast</a></li>
-                                        <li><a class="dropdown-item" href="#">Lunch</a></li>
-                                        <li><a class="dropdown-item" href="#">Dinner</a></li>
+                                        <li><a class="dropdown-item" href="/assets/image/Matmeny-november.pdf">Breakfast</a></li>
+                                        <li><a class="dropdown-item" href="/assets/image/LUNCHMENY-NY-v.51PDF.pdf">Lunch</a></li>
+                                        <li><a class="dropdown-item" href="/assets/image/Sallskapsmenyer-november.pdf">Dinner</a></li>
                                     </ul>
                                 </li>
                                 <li class="nav-list">
-                                    <a href="#"><span>Bookings</span></a>
+                                    <a href="Booking.html"><span>Bookings</span></a>
                                 </li>
-                                <!--<li class="nav-list">
-                                    <a href="#"><span>Contact</span></a>
-                                </li>-->
+                                <li class="nav-list">
+                                    <a href="contact.html"><span>Contact</span></a>
+                                </li>
                             </ul>
                         </div>                        
                     </div>
