--- a/Menu.html
+++ b/Menu.html
@@ -33,7 +33,7 @@
                         <div class="collapse navbar-collapse" id="navbar-Nav">
                             <ul id="nav me-auto mb-2 mb-lg-0">
                                 <li class="nav-list">
-                                    <a href="#"><span>Home</span></a>
+                                    <a href="index.html"><span>Home</span></a>
                                 </li>
                                 <li class="nav-item dropdown">
                                     <a class="nav-link dropdown-toggle" href="Menu.html" id="menuDropdown" role="button"
@@ -45,10 +45,10 @@
                                     </ul>
                                 </li>
                                 <li class="nav-list">
-                                    <a href="#"><span>Bookings</span></a>
+                                    <a href="Booking.html"><span>Bookings</span></a>
                                 </li>
                                 <li class="nav-list">
-                                    <a href="#"><span>Contact</span></a>
+                                    <a href="contact.html"><span>Contact</span></a>
                                 </li>
                             </ul>
                         </div>                        
