--- a/Menu.html
+++ b/Menu.html
@@ -39,9 +39,10 @@
                                     <a class="nav-link dropdown-toggle" href="Menu.html" id="menuDropdown" role="button"
                                         data-bs-toggle="dropdown" aria-expanded="false">Menu</a>
                                     <ul class="dropdown-menu" aria-labelledby="menuDropdown">
-                                        <li><a class="dropdown-item" href="#">Breakfast</a></li>
-                                        <li><a class="dropdown-item" href="#">Lunch</a></li>
-                                        <li><a class="dropdown-item" href="#">Dinner</a></li>
+                                        <li><a class="dropdown-item" href="../project-4karl/assets/image/Matmeny-november.pdf">Breakfast</a></li>
+                                        <li><a class="dropdown-item" href="../assets/image/LUNCHMENY-NY-v.51PDF.pdf">Lunch</a></li>
+                                        <li><a class="dropdown-item" href="/assets/image/Sallskapsmenyer-november.pdf">Dinner</a></li>
+                                        
                                     </ul>
                                 </li>
                                 <li class="nav-list">
@@ -64,7 +65,7 @@
         </div>
 
     </section>
-    <footer class="container-fluid">
+    <!--<footer class="container-fluid">
         <div class="row">
             <div class="col-sm-4">
                 <h5 class="uppercase general-sub">About</h5>
@@ -99,7 +100,7 @@
             </div>
         </div>
 
-    </footer>
+    </footer>-->
     </div>
 </body>
 
