--- a/Booking.html
+++ b/Booking.html
@@ -4,10 +4,15 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" type="text/css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css" type="text/css">
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" type="text/css">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css"
+        type="text/css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css"
+        type="text/css">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css"
+        type="text/css">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/flatpickr/dist/flatpickr.min.css">
+    <script src="https://cdn.jsdelivr.net/npm/flatpickr"></script>
 
     <link rel="stylesheet" href="assets/css/style.css">
     <title>KarlsDinner</title>
@@ -52,7 +57,7 @@
                                     <a href="contact.html"><span>Contact</span></a>
                                 </li>
                             </ul>
-                        </div>                        
+                        </div>
                     </div>
                 </div>
             </div>
@@ -69,13 +74,63 @@
                 </div>
                 <button type="submit" class="btn btn-primary">Book Now</button>
             </form>
+
+            <div class="container mt-5">
+                <h2>Book a Date</h2>
+                <form id="bookingForm">
+                    <!--<label for="datePicker">Select a Date:</label>
+                    <input type="text" id="datePicker" name="date" class="form-control" placeholder="Choose a date" required>-->
+                    <label for="name">Name:</label>
+                    <input type="text" id="name" name="name" class="form-control" placeholder="Your Name" required>
+                    <label for="email">Email:</label>
+                    <input type="email" id="email" name="email" class="form-control" placeholder="Your Email" required>
+                    <button type="submit" class="btn btn-primary mt-3">Submit</button>
+                </form>
+                
+                <div id="responseMessage" class="mt-3"></div>
+
+                <script>
+                    flatpickr("#datePicker", {
+                        enableTime: true,
+                        dateFormat: "Y-m-d H:i",
+                        minDate: "today",
+                        maxDate: "2090-12-31",
+                        disable: ["2024-12-24", "2024-12-25", "2025-01-01"], // Example of disabled dates
+                        weekNumbers: true,
+                    });
+                    
+
+                    //handle submission
+                    document.getElementById("BookingForm").addEventListener("submit", function (e) {
+                        e.preventDefault();
+                        const formData = New FormData(e.target);
+
+                        fetch("/api/book-date", {
+                            method: "POST",
+                            body: JSON.stringify(Object.fromEntries(formData.entries())),
+                            headers: {
+                                "Content-Type": "application/json"
+                            }
+                        })
+                            .then(response => response.json())
+                            .then(data => {
+                                document.getElementById("responseMessage").textContent = data.message;
+                            })
+                            .catch(error => {
+                                document.getElementById("responseMessage").textContent = "An error occurred.";
+                                console.error("Error submitting booking:", error);
+                            });
+                    })
+                </script>
+            </div>
+
         </div>
 
 
     </section>
-    <footer class="container-fluid mt-auto list-inline-item">
+    <!--<footer class="container-fluid mt-auto list-inline-item">
         <div class="row p-4 text-light">
-            <!--about section-->
+            <!--about section
             <div class="col-sm-4 ">
                 <h5 class="uppercase general-sub">About</h5>
                 <button class="btn btn-link text-light p-0" type="button" data-bs-toggle="collapse"
@@ -121,9 +176,8 @@
                 </p>
             </div>
         </div>
-    </footer>
+    </footer>-->
     </div>
 </body>
 
 </html>
-
