--- a/contact.html
+++ b/contact.html
@@ -40,9 +40,9 @@
                                     <a class="nav-link dropdown-toggle" href="Menu.html" id="menuDropdown" role="button"
                                         data-bs-toggle="dropdown" aria-expanded="false">Menu</a>
                                     <ul class="dropdown-menu" aria-labelledby="menuDropdown">
-                                        <li><a class="dropdown-item" href="../assets/image/Matmeny-november.pdf">Breakfast</a></li>
-                                        <li><a class="dropdown-item" href="/assets/image/LUNCHMENY-NY-v.51PDF.pdf">Lunch</a></li>
-                                        <li><a class="dropdown-item" href="/assets/image/Sallskapsmenyer-november.pdf">Dinner</a></li>
+                                        <li><a class="dropdown-item" href="#">Breakfast</a></li>
+                                        <li><a class="dropdown-item" href="#">Lunch</a></li>
+                                        <li><a class="dropdown-item" href="#">Dinner</a></li>
                                     </ul>
                                 </li>
                                 <li class="nav-list">
@@ -60,12 +60,23 @@
         </div>
     </header>
     <section>
-        <div class="col-auto">
-            <h1>thing we like to see</h1>
+        <div class="row container-fluid">
+            <div class="col-md-12 ">
+                <div class="row cont-color align-items-center">
+                    <h1>Contact Us</h1>
+                    <br>
+                    <h4>Opening hours</h4>
+                    <P>Monday to friday  11:30 - 23:00 </P>
+                    <p>Saturday to sunday 12:00 - 23:00 </p>
+                    <p>Public holidays 15:00 - 23:00</p>
+
+                    <br>
+                    <p>Do not hesitate to give us a call for further information and enquiry</p>
+                </div>
+            </div>
         </div>
-
-
     </section>
+
     <footer class="container-fluid mt-auto list-inline-item">
         <div class="row p-4 text-light">
             <!--about section-->
