--- a/index.html
+++ b/index.html
@@ -39,9 +39,9 @@
                                     <a class="nav-link dropdown-toggle" href="Menu.html" id="menuDropdown" role="button"
                                         data-bs-toggle="dropdown" aria-expanded="false">Menu</a>
                                     <ul class="dropdown-menu" aria-labelledby="menuDropdown">
-                                        <li><a class="dropdown-item" href="/assets/image/Matmeny-november.pdf">Breakfast</a></li>
-                                        <li><a class="dropdown-item" href="/assets/image/LUNCHMENY-NY-v.51PDF.pdf">Lunch</a></li>
-                                        <li><a class="dropdown-item" href="/assets/image/Sallskapsmenyer-november.pdf">Dinner</a></li>
+                                        <li><a class="dropdown-item" href="#">Breakfast</a></li>
+                                        <li><a class="dropdown-item" href="#">Lunch</a></li>
+                                        <li><a class="dropdown-item" href="#">Dinner</a></li>
                                     </ul>
                                 </li>
                                 <li class="nav-list">
@@ -59,15 +59,15 @@
         </div>
     </header>
     <section>
-        <div class="col-auto">
-            <h1>things we like to see</h1>
+        <div class="col-auto align center">
+            <h1></h1>
         </div>
 
 
     </section>
-    <footer class="container-fluid mt-auto list-inline-item">
+    <!--<footer class="container-fluid mt-auto list-inline-item">
         <div class="row p-4 text-light">
-            <!--about section-->
+            <!--about section
             <div class="col-sm-4 ">
                 <h5 class="uppercase general-sub">About</h5>
                 <button class="btn btn-link text-light p-0" type="button" data-bs-toggle="collapse"
@@ -113,7 +113,7 @@
                 </p>
             </div>
         </div>
-    </footer>
+    </footer>-->
     </div>
 </body>
 
