--- a/Booking.html
+++ b/Booking.html
@@ -99,31 +99,15 @@
                         weekNumbers: true,
 
                         onChange: function(selectedDates, dateStr, instance) {
-                            console.log("Selected date: " + dateStr); // Logs the selected date
-                        }
-                    });
-                    
-                    //handle submission
-                    /*document.getElementById("bookingForm").addEventListener("submit", function (e) {
-                        e.preventDefault();
-                        const formData = New FormData(e.target);
-
-                        fetch("/api/book-date", {
-                            method: "POST",
-                            body: JSON.stringify(Object.fromEntries(formData.entries())),
-                            headers: {
-                                "Content-Type": "application/json"
-                            }
-                        })
-                            .then(response => response.json())
-                            .then(data => {
-                                document.getElementById("responseMessage").textContent = data.message;
-                            })
-                            .catch(error => {
-                                document.getElementById("responseMessage").textContent = "An error occurred.";
-                                console.error("Error submitting booking:", error);
-                            });
-                        })*/
+                            fetch("/api/available-dates") // Call backend for available dates
+                                .then(response => response.json())
+                                .then(data => {
+                                    datePicker.set("enable", data.dates); // Populate Flatpickr with dates
+                                })
+                                .catch(error => console.error("Error fetching available dates:", error));
+                            }/*console.log("Selected date: " + dateStr); // Logs the selected date*/
+            
+                        });
                 </script>
             </div>
 
